@@ -1271,6 +1271,11 @@ where a \fIResumeProg\fR like \fIcapmc\fR in Cray machines is stalled and one
 wants to restore the node to "IDLE" manually, in this case rebooting the node
 and setting the state to "POWER_DOWN" will cancel the previous "POWER_UP"
 state and the node will become "IDLE".
+"POWER_DOWN_ASAP" will drain the node and mark it for power down. Currently
+running jobs will complete first and no additional jobs will be allocated to
+the node.
+"POWER_DOWN_FORCE" will cancel all jobs on the node, power it down, and reset
+its state to idle.
 The "NoResp" state will only set the "NoResp" flag for a node without
 changing its underlying state.
 While all of the above states are valid, some of them are not valid new
